web-infras/parser/tests/fixtures/esprima/ES6/arrow-function/array-binding-pattern/invalid-elision-after-rest/output.txt
[SyntaxError]: Rest parameter must be last formal parameter (1,11)
1|([a,...b,])=>0;
 |         ^
